CHANGES IN FLTK 1.1.0

	- Added first steps to CodeWarrior/OS_X support (see
	  fltk-1.1.x/CodeWarrior/OS_X.sit)
	- Cleaned up the WIN32 export definitions for some of
	  the widget classes.
	- Fixed a filename completion bug when changing
	  directories.
	- Fl_File_Chooser::value() would return directories with
	  a trailing slash, but would not accept a directory
	  without a trailing slash.
	- When installing shared libraries, FLUID is now linked
	  against the shared libraries.
	- MacOS: missing compile rule for .dylib files.
	- Fl_Group::current(), Fl_Group::begin(), and
	  Fl_Group::end() are no longer inlined so that they are
	  properly exported in DLLs under WIN32.  Similar
	  changes for all static inline methods in other
	  classes.
	- MacOS: support for Mac system menu (Fl_Sys_Menu_Bar)
	- MacOS: wait(0) would not handle all pending events
	- Added new makeinclude file for MingW using GCC 3.1.x.
	- Fl_Choice::value(n) didn't range check "n".
	- The MingW and OS/2 makeinclude files didn't have the
	  new fltk_images library definitions.
	- Fl_Text_Editor didn't scroll the text in the widget
	  when dragging text.
	- Config header file changes for Borland C++.
	- FLTK didn't provide a Fl::remove_handler() method.


CHANGES IN FLTK 1.1.0rc4

	- Added new filter_value() methods to Fl_File_Chooser to
	  get and set the current file filters.
	- Added support for custom filters to Fl_File_Chooser.
	- Added Borland C++ Builder IDE project files from
	  Alexey Parshin.
	- Resource leak fixes under WIN32 from Ori Berger.
	- Now register a WIN32 message for thread messages.
	- Fl_Window didn't initialize the min and max window
	  size fields.
	- The JPEG and PNG image classes have been moved to the
	  fltk_images library, a la FLTK 2.0.  You can register
	  all image file formats provided in fltk_images using
	  the new fl_register_images() function.
	- Fl_XBM_Image didn't correctly load XBM files.
	- MacOS: Added Greg Ercolano's file descriptor support.